--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,10 @@
 body {
-  font: normal 14px/100% "Andale Mono", AndaleMono, monospace;
+  font: "Andale Mono", AndaleMono, monospace;
   color: #fff;
   padding: 50px;
   width: 300px;
   margin: 0 auto;
-  background-color: #374954;
-  text-align: center;
+  background-color: #374154;
 }
 
 h1 {
@@ -13,17 +12,6 @@ h1 {
 }
 
 .container {
-  margin: 60% auto;
+  margin: 40% auto;
 }
 
-button {
-  display: inline-block;
-  background-color: #6bbe92;
-  border: 0;
-  width: 60px;
-  margin: 10px;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;
-  font-size: 50px;
-}
